feat: dynamic menu
